force-app/main/default/objects/User_Trailblazer__c/User_Trailblazer__c.object-meta.xml
<CustomObject>
    <label>User Trailblazer</label>
    <nameField>
        <displayFormat>UTB-{0000}</displayFormat>
        <label>User Trailhead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users Trailblazer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>