force-app/main/default/objects/User_Trailblazer__c/fields/Accumulated_Score__c.field-meta.xml
<CustomField>
    <fullName>Accumulated_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Accumulated Score</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>