force-app/main/default/objects/User_Trailblazer__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCOUT</fullName>
            </value>
            <value>
                <fullName>HIKER</fullName>
            </value>
            <value>
                <fullName>EXPLORER</fullName>
            </value>
            <value>
                <fullName>ADVENTURER</fullName>
            </value>
            <value>
                <fullName>MOUNTAINEER</fullName>
            </value>
            <value>
                <fullName>EXPEDITIONER</fullName>
            </value>
            <value>
                <fullName>RANGER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>